# whatchamacallit

./: .gitignore  README
EscapedString/: EscapedString.cabal
RSAPair/: RSAPair.cabal
RSAPair/src/: RSAPair.hs
ToJSString/: ToJSString.cabal
ToJSString/src/: ToJSString.hs  ToJSString.hs~
YAMLize/: YAMLize.cabal
YAMLize/src/: FromYAML.hs  ToYAML.hs
escaped-string/: Makefile  PKGBUILD  escstring.1  escstring.c
expseq/: Makefile  PKGBUILD  expseq.c
json2bencode/: json2bencode.cabal
json2bencode/src/: Main.hs
scripts/: add-link  add-quip  add-quote  adjust-screens  as-tmp  avg  dir2yaml  docker-delete-images  ff-here  gdr-img  ghc-clean-pkgs  ghc-wrapper  ghci-with  git-add-untracked-sources  git-ls-untracked-sources  git-update-all  license  minimize-pdf-file-size  mk-cabal-executable-file  mk-cabal-file  mp3rename  new-cabal-exec  panview  pr-pamphlet  pr-paper  surf-here  twit  windows  yaml2csv  yaml2dir
