name:                RSAPair
version:             0.1.0.1
license:             OtherLicense
license-file:        LICENSE
author:              Getty Ritter
maintainer:          gdritter@galois.com
category:            Codec
build-type:          Simple
cabal-version:       >=1.10

executable rsa-pair
  main-is:             RSAPair.hs
  build-depends:       base >=4.6 && <4.8,
                       bytestring, binary, DRBG, crypto-api, RSA
  hs-source-dirs:      src
  default-language:    Haskell2010