name:                YAMLize
version:             0.1.0.0
license:             OtherLicense
license-file:        LICENSE
author:              Getty Ritter
maintainer:          gdritter@galois.com
category:            Data
build-type:          Simple
cabal-version:       >=1.10

executable ToYAML
  main-is:             ToYAML.hs
  build-depends:       base >=4.6 && <4.7, yaml, aeson, bytestring
  hs-source-dirs:      src
  default-language:    Haskell2010

executable FromYAML
  main-is:             FromYAML.hs
  build-depends:       base >=4.6 && <4.7, yaml, aeson, bytestring
  hs-source-dirs:      src
  default-language:    Haskell2010
