name:                json2bencode
version:             0.1.0.0
synopsis:            A utility for converting JSON to Bencode
license:             BSD3
license-file:        LICENSE
author:              Getty Ritter
maintainer:          gettyritter@gmail.com
copyright:           2016
category:            Data
build-type:          Simple
cabal-version:       >=1.10

executable json2bencode
  main-is:             Main.hs
  build-depends:       base,
                       aeson,
                       bencode,
                       bytestring,
                       containers,
                       scientific,
                       text,
                       unordered-containers,
                       vector
  hs-source-dirs:      src
  default-language:    Haskell2010